journal page deleted
